Fixing text in last box not aligning

--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -7,21 +7,39 @@ body {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding: 10px;
+  
+  
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 20px;
+  padding: 10px;
+  
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px 10px;
 }
 
 .button-container {
   background: #e3f4ff;
+  margin: 10px auto 0;
+  padding: 10px 20px;
+  text-align: center;
+
 }
+
+
+
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  padding: 10px 30px;
+  margin: 0 auto;
+  
 }
